force-app/main/default/objects/Activity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity#</label>
    <type>AutoNumber</type>
</CustomField>