force-app/main/default/objects/Activity/fields/Activity_id_18__c.field-meta.xml
<CustomField>
    <fullName>Activity_id_18__c</fullName>
    <formula>Casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity id</label>
    <type>Text</type>
</CustomField>