force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>IF( IsTask = True ,  Task_Type__c ,   TEXT(Event_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>