force-app/main/default/objects/Activity/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <inlineHelpText>Required when call type is Pay Invoice</inlineHelpText>
    <label>Amount Paid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>