force-app/main/default/objects/Activity/fields/Assigned_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Manager__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Manager</label>
    <type>Text</type>
</CustomField>