force-app/main/default/objects/Activity/fields/Assigned_To_Title__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Title</label>
    <type>Text</type>
</CustomField>