force-app/main/default/objects/Activity/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <label>Billing Account #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>