force-app/main/default/objects/Activity/fields/BrightPattern__SPRecordingOrTranscriptURL__c.field-meta.xml
<CustomField>
    <fullName>BrightPattern__SPRecordingOrTranscriptURL__c</fullName>
    <label>Recording/Transcript</label>
    <type>Url</type>
</CustomField>