force-app/main/default/objects/Activity/fields/Call_Center_Lead__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>