force-app/main/default/objects/Activity/fields/Call_Center_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Call Center Activities</relationshipLabel>
    <relationshipName>Activity</relationshipName>
    <type>Lookup</type>
</CustomField>