force-app/main/default/objects/Activity/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <label>Call Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>DIY Line</fullName>
            </value>
            <value>
                <fullName>Ecommerce Chat</fullName>
            </value>
            <value>
                <fullName>Ecommerce Email</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
                <label>Ecommerce Line</label>
            </value>
            <value>
                <fullName>EOC Line</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Public Toll Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>