force-app/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service-ETA Inquiry</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Service Request-OFR</fullName>
            </value>
            <value>
                <fullName>Add PO</fullName>
                <label>Add/Change PO</label>
            </value>
            <value>
                <fullName>Add Line Item</fullName>
                <label>Add Svc/Prod to Exist Order</label>
            </value>
            <value>
                <fullName>AR Dispute/Credit Hold-Not Resolved</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>AR Dispute/Credit Hold-Resolved</label>
            </value>
            <value>
                <fullName>Change Address</fullName>
                <label>Customer Maintenance</label>
            </value>
            <value>
                <fullName>Customer Portal Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Ecommerce Support</fullName>
            </value>
            <value>
                <fullName>Equipment Repair-COMs</fullName>
            </value>
            <value>
                <fullName>Equipment Repair-EAC</fullName>
            </value>
            <value>
                <fullName>Pay Invoice/Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Public Comment</fullName>
            </value>
            <value>
                <fullName>Pull/Cancel Service</fullName>
            </value>
            <value>
                <fullName>Recovery Fee/ e-Manifest Fee-Not Resolved</fullName>
            </value>
            <value>
                <fullName>Recovery Fee/ e-Manifest Fee</fullName>
                <label>Recovery Fee/ e-Manifest Fee-Resolved</label>
            </value>
            <value>
                <fullName>Add Service (Existing Customer)</fullName>
                <label>Sales-Add Service (Existing Customer)</label>
            </value>
            <value>
                <fullName>Sales-Add Service (Existing Customer) No OPP</fullName>
            </value>
            <value>
                <fullName>Add Service (New Customer)</fullName>
                <label>Sales-Add Service (New Customer)</label>
            </value>
            <value>
                <fullName>Drop Call/Wrong Num/Dead Air</fullName>
            </value>
            <value>
                <fullName>Murphys Town Collection</fullName>
            </value>
			<value>	
                <fullName>HWP</fullName>	
            </value>
			<value>	
                <fullName>Internal Support</fullName>	
            </value>
			<value>
                <fullName>Courtesy Callback</fullName>
            </value>
			<value>
                <fullName>DBA Customer</fullName>
            </value>
            <value>
                <fullName>DBA Vendor</fullName>
            </value>
            <value>
                <fullName>DBA Driver</fullName>
            </value>
            <value>
                <fullName>DBA Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>