force-app/main/default/objects/Activity/fields/Caller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Last_Name__c</fullName>
    <label>Caller&apos;s Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>