force-app/main/default/objects/Activity/fields/Caller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Caller_Phone__c</fullName>
    <label>Caller&apos;s Phone</label>
    <type>Phone</type>
</CustomField>