force-app/main/default/objects/Activity/fields/ciscocjs__ANI__c.field-meta.xml
<CustomField>
    <fullName>ciscocjs__ANI__c</fullName>
    <label>Ani</label>
    <length>20</length>
    <type>Text</type>
</CustomField>