force-app/main/default/objects/Activity/fields/ciscocjs__DNIS__c.field-meta.xml
<CustomField>
    <fullName>ciscocjs__DNIS__c</fullName>
    <label>Dnis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>