force-app/main/default/objects/Activity/fields/ciscocjs__QUEUE_NAME__c.field-meta.xml
<CustomField>
    <fullName>ciscocjs__QUEUE_NAME__c</fullName>
    <label>Queue Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>