force-app/main/default/objects/Activity/fields/ciscocjs__RINGING_TIME__c.field-meta.xml
<CustomField>
    <fullName>ciscocjs__RINGING_TIME__c</fullName>
    <label>Ringing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>