force-app/main/default/objects/Activity/fields/ciscocjs__WRAP_UP_DURATION__c.field-meta.xml
<CustomField>
    <fullName>ciscocjs__WRAP_UP_DURATION__c</fullName>
    <label>Wrap Up Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>