force-app/main/default/objects/Activity/fields/Confirm__c.field-meta.xml
<CustomField>
    <fullName>Confirm__c</fullName>
    <description>Confirm #</description>
    <inlineHelpText>Required when Call Type is Pay Invoice</inlineHelpText>
    <label>Confirm #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>