force-app/main/default/objects/Activity/fields/Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Verified__c</fullName>
    <label>Contact Verified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAIN</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>MANI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>