force-app/main/default/objects/Activity/fields/Create_call_center_case__c.field-meta.xml
<CustomField>
    <fullName>Create_call_center_case__c</fullName>
    <formula>Or(
ISPICKVAL(Call_Type__c, &quot;AR Dispute/Credit Hold-Not Resolved&quot;),
ISPICKVAL(Call_Type__c, &quot;Recovery Fee/ e-Manifest Fee-Not Resolved&quot;),
ISPICKVAL(Call_Type__c, &quot;Equipment Repair-COMs&quot;),
ISPICKVAL(Call_Type__c, &quot;Public Comment&quot;),
ISPICKVAL(Call_Type__c, &quot;Service Request-OFR&quot;),
ISPICKVAL(Call_Type__c, &quot;Suspend Service&quot;),
ISPICKVAL(CS_Call_Reason__c, &quot;CAN Lube Order&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Case</label>
    <type>Checkbox</type>
</CustomField>