force-app/main/default/objects/Activity/fields/Create_Call_Center_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Call_Center_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Call Center Lead</label>
    <type>Checkbox</type>
</CustomField>