force-app/main/default/objects/Activity/fields/Create_Call_Center_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Call_Center_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Call Center Opportunity</label>
    <type>Checkbox</type>
</CustomField>