force-app/main/default/objects/Activity/fields/Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead__c</fullName>
    <formula>AND(
ISPICKVAL(Call_Type__c, &quot;Add Service (New Customer)&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Lead</label>
    <type>Checkbox</type>
</CustomField>