force-app/main/default/objects/Activity/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <formula>AND(
ISPICKVAL(Call_Type__c,(&quot;Add Service (Existing Customer)&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>