force-app/main/default/objects/Activity/fields/CS_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Call_Reason__c</fullName>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service_or_Schedule_Request</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Customer Data Change</fullName>
            </value>
            <value>
                <fullName>Document_Request_Open</fullName>
            </value>
            <value>
                <fullName>Employee_Complaint</fullName>
            </value>
            <value>
                <fullName>Employee_Compliment</fullName>
            </value>
            <value>
                <fullName>Equipment Repair</fullName>
            </value>
            <value>
                <fullName>Invoice or Credit Question</fullName>
            </value>
            <value>
                <fullName>Invoice_or_Payment_Dispute</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Processed</fullName>
            </value>
            <value>
                <fullName>Price Inquiry</fullName>
            </value>
            <value>
                <fullName>Pull_Full</fullName>
            </value>
            <value>
                <fullName>Pull_Partial</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Sales_Escalation_Follow_Up</fullName>
            </value>
            <value>
                <fullName>Sales Lead</fullName>
            </value>
            <value>
                <fullName>Sales Purchase</fullName>
            </value>
            <value>
                <fullName>Schedule Change</fullName>
            </value>
            <value>
                <fullName>Service/Schedule Escalation</fullName>
            </value>
            <value>
                <fullName>Ecommerce Account Issue – Resolved</fullName>
            </value>
            <value>
                <fullName>Ecommerce Account Issue – Not Resolved (additional case required assigned to Ecommerce Queue)</fullName>
            </value>
            <value>
                <fullName>Ecommerce Log in Issue - Resolved</fullName>
            </value>
            <value>
                <fullName>Ecommerce Log in Issue – Not Resolved (additional case required assigned to Ecommerce Queue)</fullName>
            </value>
            <value>
                <fullName>Product Error (additional case required assigned to Ecommerce Queue)</fullName>
            </value>
            <value>
                <fullName>Order Support</fullName>
            </value>
            <value>
                <fullName>Product Return (additional case required assigned to Ecommerce Queue)</fullName>
            </value>
            <value>
                <fullName>CAN Lube Order</fullName>
            </value>
			<value>
                <fullName>Left Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>