force-app/main/default/objects/Activity/fields/CS_Description__c.field-meta.xml
<CustomField>
    <fullName>CS_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>