force-app/main/default/objects/Activity/fields/CS_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>CS_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allied Product Sales</fullName>
            </value>
            <value>
                <fullName>Case Resolution</fullName>
            </value>
            <value>
                <fullName>Containerized Waste Services</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Documentation</fullName>
            </value>
            <value>
                <fullName>Lube Oil Bulk Sales</fullName>
            </value>
            <value>
                <fullName>Lube Oil Package Sales</fullName>
                <isActive>false</isActive>
                <label>Lube Oil Package Sales</label>
            </value>
            <value>
                <fullName>Parts Washing Service</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Received Error Code</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
            <value>
                <fullName>Used Motor Oil</fullName>
            </value>
            <value>
                <fullName>Vac Services - Separators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>