force-app/main/default/objects/Activity/fields/Customer_Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>