force-app/main/default/objects/Activity/fields/Days_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Date__c</fullName>
    <formula>ActivityDate - TODAY()</formula>
    <label>Days Since Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>