force-app/main/default/objects/Activity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is related to HR and used to select the Department those are Linked to Location</description>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Department should be Linked to Location while creating Task.</errorMessage>
        <filterItems>
            <field>Organization_Department__c.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Organization_Department__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Department</relationshipName>
    <type>Lookup</type>
</CustomField>