force-app/main/default/objects/Activity/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created only for the Customer Validation Task Record type</description>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>