force-app/main/default/objects/Activity/fields/Event_Classifcation__c.field-meta.xml
<CustomField>
    <fullName>Event_Classifcation__c</fullName>
    <description>This field determines if the type of business for the event.  equivalent to account class on the beacon call note.</description>
    <label>Event Classifcation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Cross Selling</fullName>
            </value>
            <value>
                <fullName>Base business</fullName>
            </value>
            <value>
                <fullName>Pipeline Review</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Strategic Account Planning</fullName>
            </value>
            <value>
                <fullName>Team Meeting</fullName>
            </value>
            <value>
                <fullName>Sales Leadership Meeting</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>