force-app/main/default/objects/Activity/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <formula>ActivityDate + ( DurationInMinutes /1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>