force-app/main/default/objects/Activity/fields/Event_over_1_Day__c.field-meta.xml
<CustomField>
    <fullName>Event_over_1_Day__c</fullName>
    <description>Does the event start and end on different days</description>
    <formula>Event_End_Date__c &lt;&gt;  Event_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event over 1 Day</label>
    <type>Checkbox</type>
</CustomField>