force-app/main/default/objects/Activity/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <formula>ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>