force-app/main/default/objects/Activity/fields/Event_Tag__c.field-meta.xml
<CustomField>
    <fullName>Event_Tag__c</fullName>
    <description>Used to tag certain events for reporting purposes</description>
    <label>Event Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2018 Landfill Growth Campaign</fullName>
            </value>
            <value>
                <fullName>AR River Flood 2019</fullName>
            </value>
            <value>
                <fullName>Blended Oil East Cross Sell</fullName>
            </value>
            <value>
                <fullName>Central US Flood 2017</fullName>
                <isActive>false</isActive>
                <label>Central US Flood 2017</label>
            </value>
            <value>
                <fullName>E&amp;C Firms Blitz ON/MB 2018</fullName>
            </value>
            <value>
                <fullName>E Canada Cross Sell</fullName>
            </value>
            <value>
                <fullName>E Canada Dewatering 2019</fullName>
            </value>
            <value>
                <fullName>E-Manifesting</fullName>
            </value>
            <value>
                <fullName>H20 Integration Activity</fullName>
            </value>
            <value>
                <fullName>Hurricane Dorian 2019</fullName>
            </value>
            <value>
                <fullName>Hurricane Florence 2018</fullName>
            </value>
            <value>
                <fullName>Hurricane Harvey</fullName>
                <isActive>false</isActive>
                <label>Hurricane Harvey</label>
            </value>
            <value>
                <fullName>Hurricane Ida 2021</fullName>
            </value>
            <value>
                <fullName>Hurricane Irma 2017</fullName>
                <isActive>false</isActive>
                <label>Hurricane Irma 2017</label>
            </value>
            <value>
                <fullName>Hurricane Maria 2017</fullName>
                <isActive>false</isActive>
                <label>Hurricane Maria 2017</label>
            </value>
            <value>
                <fullName>Hurricane Matthew 2016</fullName>
                <isActive>false</isActive>
                <label>Hurricane Matthew 2016</label>
            </value>
            <value>
                <fullName>Hurricane Michael 2018</fullName>
            </value>
            <value>
                <fullName>Lambton Landfill Opps</fullName>
            </value>
            <value>
                <fullName>Louisiana Flood 2016</fullName>
                <isActive>false</isActive>
                <label>Louisiana Flood 2016</label>
            </value>
            <value>
                <fullName>Lube Retention</fullName>
            </value>
            <value>
                <fullName>Mississauga Drum Opps</fullName>
            </value>
            <value>
                <fullName>PFAS</fullName>
            </value>
            <value>
                <fullName>West Region 2019 New Business Targets</fullName>
            </value>
            <value>
                <fullName>West Virginia Sales Blitz January 2017</fullName>
                <isActive>false</isActive>
                <label>West Virginia Sales Blitz January 2017</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>