force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Virtual (WebEx)</fullName>
            </value>
            <value>
                <fullName>Working on Quote</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Internal Discussion</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Security Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>