force-app/main/default/objects/Activity/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>DateTime</type>
</CustomField>