force-app/main/default/objects/Activity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <inlineHelpText>Required when Call type is Pay Invoice or AR Dispute</inlineHelpText>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>