force-app/main/default/objects/Activity/fields/Job_Categories__c.field-meta.xml
<CustomField>
    <fullName>Job_Categories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
	<description>This field is related to HR and used to select the Job Category those are Linked to Location</description>
    <label>Job Categories</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Job Category should be Linked to Location while creating Task.</errorMessage>
        <filterItems>
            <field>Organization_Job_Code__c.Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Organization_Job_Code__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>JobCategory</relationshipName>
    <type>Lookup</type>
</CustomField>