force-app/main/default/objects/Activity/fields/Key_Account_Implementation_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Implementation_Name__c</fullName>
    <label>Key Account Implementation Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADN (The Network)</fullName>
            </value>
            <value>
                <fullName>BlueLine Rental 020117</fullName>
            </value>
            <value>
                <fullName>Cascades 080218</fullName>
            </value>
            <value>
                <fullName>Coach USA 012918</fullName>
            </value>
            <value>
                <fullName>Mobility Works 100417</fullName>
            </value>
            <value>
                <fullName>Niagara Bottling 110617</fullName>
            </value>
            <value>
                <fullName>Sunbelt Rentals Can 021418</fullName>
            </value>
            <value>
                <fullName>Titan Machinery 032618</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>