force-app/main/default/objects/Activity/fields/Lead_City__c.field-meta.xml
<CustomField>
    <fullName>Lead_City__c</fullName>
    <description>This field is to enter Lead City</description>
    <label>Lead City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>