force-app/main/default/objects/Activity/fields/Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company_Name__c</fullName>
    <inlineHelpText>Required when Call Type is Sales-Add service (New Customer)</inlineHelpText>
    <label>Lead Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>