force-app/main/default/objects/Activity/fields/Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country__c</fullName>
    <label>Lead Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>