force-app/main/default/objects/Activity/fields/Lead_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Lead_State_Province__c</fullName>
    <description>This field is to enter Lead State/Province</description>
    <label>Lead State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>