force-app/main/default/objects/Activity/fields/Lead_Street__c.field-meta.xml
<CustomField>
    <fullName>Lead_Street__c</fullName>
    <description>This field is to enter Lead Street</description>
    <label>Lead Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>